--- a/ssh/config
+++ b/ssh/config
@@ -1,26 +1,39 @@
-Host devnexus
-    HostName 192.168.1.100
+# Read more about SSH config files: https://linux.die.net/man/5/ssh_config
+
+Host *
+    Port 22
+    Compression yes
+    ForwardAgent no
+    ForwardX11 no
+    ForwardX11Trusted yes
+    ServerAliveInterval 60
+    ServerAliveCountMax 30
+    ControlMaster auto
+    ControlPath ~/.ssh/controlmasters/%r@%h:%p.sock
+    ControlPersist 30m
+    IdentityFile ~/.ssh/id_rsa
+
+# Configurations for home server
+
+Host home.user
+    HostName ssh.gaymerfamily.com
     User jonas
-    IdentityFile ~/.ssh/id_rsa
 
-Host devroot
-    HostName 192.168.1.100
+Host home.root
+    HostName ssh.gaymerfamily.com
     User root
-    IdentityFile ~/.ssh/id_rsa
 
-Host sitehost
+## Configurations for WebTech server(s)
+
+Host iu.*
+    User jonmcclu
+    IdentityFile ~/.ssh/id_webtech
+
+Host iu.sitehost
     HostName ssh.sitehost.iu.edu
-    User jonmcclu
-    IdentityFile ~/.ssh/id_webtech
 
-Host sitehost-test
+Host iu.sitehost-test
     HostName ssh.sitehost-test.iu.edu
-    User jonmcclu
-    IdentityFile ~/.ssh/id_webtech
 
-Host pages
+Host iu.pages
     HostName ssh-pages.iu.edu
-    User jonmcclu
-    IdentityFile ~/.ssh/id_webtech
-
-
