--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -13,7 +13,7 @@
 [user]
 	name = Jonas McClure
 	email = jonmcclu@proton.me
-	signingkey = ~/.ssh/id_rsa
+	signingkey = ~/.ssh/id_gitlab
 [gpg]
 	format = ssh
 [commit]
