Adding mydig function
The mydig function returns the result of:
- dig A <domain>
- dig AAAA <domain>

This allows a quick way to get both IPv4 and IPv6 with dig.

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -13,7 +13,7 @@
 [user]
 	name = Jonas McClure
 	email = jonmcclu@proton.me
-	signingkey = ~/.ssh/id_gitlab
+	signingkey = ~/.ssh/id_ed25519
 [gpg]
 	format = ssh
 [commit]
