Initial cleanup of the SSH config

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -8,7 +8,7 @@ Host *
     ForwardX11Trusted yes
     ServerAliveInterval 60
     ServerAliveCountMax 30
-    IdentityFile ~/.ssh/id_rsa
+    IdentityFile ~/.ssh/id_ed25519
 
 # Configurations for home server
 
@@ -47,19 +47,3 @@ Host iu.sitehost.wsshrly
 Host iu.sitehost-test.wsshrly
     HostName ssh.sitehost-test.iu.edu
     User wsshrly
-
-## Repository Configurations
-# -- repositories should be cloned with these configurations
-
-Host gitlab.*
-    IdentitiesOnly yes
-
-Host gitlab.dotfiles
-    Hostname gitlab.com
-    User jonmcclu1
-    IdentityFile ~/.ssh/id_gitlab
-
-Host gitlab.videoencoding
-    Hostname gitlab.com
-    User jonmcclu1
-    IdentityFile ~/.ssh/id_gitlab
